Error en la carga del profileImage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CookApp</string>
+    <string name="app_user">User: %1$s</string>
+    <string name="app_age">Age: %1$s</string>
 </resources>
